# kmoretools

./: .kde-ci.yml  CMakeLists.txt  KF6MoreToolsConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  kmoretoolstest.cpp  kmoretoolstest2.cpp
data/: CMakeLists.txt
data/kmoretools-desktopfiles/: angrysearch.desktop  catfish.desktop  com.obsproject.Studio.desktop  com.uploadedlobster.peek.desktop  ding.desktop  disk.desktop  fontinst.desktop  fontmatrix.desktop  fsearch.desktop  giggle.desktop  git-cola-folder-handler.desktop  git-cola-view-history.kmt-edition.desktop  git-cola.desktop  gitg.desktop  gitk.kmt-edition.desktop  gnome-search-tool.desktop  gparted.desktop  gucharmap.desktop  hotshots.desktop  htop.desktop  kaption.desktop  kding.desktop  org.gnome.clocks.desktop  org.kde.filelight.desktop  org.kde.kcharselect.desktop  org.kde.kdf.desktop  org.kde.kfind.desktop  org.kde.kmousetool.desktop  org.kde.ksysguard.desktop  org.kde.ksystemlog.desktop  org.kde.ktimer.desktop  org.kde.partitionmanager.desktop  org.kde.plasma.cuttlefish.kmt-edition.desktop  org.kde.spectacle.desktop  qgit.kmt-edition.desktop  shutter.desktop  simplescreenrecorder.desktop  vokoscreenNG.desktop  xfce4-taskmanager.desktop
po/af/: kmoretools6.po
po/ar/: kmoretools6.po
po/as/: kmoretools6.po
po/ast/: kmoretools6.po
po/az/: kmoretools6.po
po/be/: kmoretools6.po
po/be@latin/: kmoretools6.po
po/bg/: kmoretools6.po
po/bn/: kmoretools6.po
po/bn_IN/: kmoretools6.po
po/br/: kmoretools6.po
po/bs/: kmoretools6.po
po/ca/: kmoretools6.po
po/ca@valencia/: kmoretools6.po
po/crh/: kmoretools6.po
po/cs/: kmoretools6.po
po/csb/: kmoretools6.po
po/cy/: kmoretools6.po
po/da/: kmoretools6.po
po/de/: kmoretools6.po
po/el/: kmoretools6.po
po/en_GB/: kmoretools6.po
po/eo/: kmoretools6.po
po/es/: kmoretools6.po
po/et/: kmoretools6.po
po/eu/: kmoretools6.po
po/fa/: kmoretools6.po
po/fi/: kmoretools6.po
po/fr/: kmoretools6.po
po/fy/: kmoretools6.po
po/ga/: kmoretools6.po
po/gd/: kmoretools6.po
po/gl/: kmoretools6.po
po/gu/: kmoretools6.po
po/ha/: kmoretools6.po
po/he/: kmoretools6.po
po/hi/: kmoretools6.po
po/hne/: kmoretools6.po
po/hr/: kmoretools6.po
po/hsb/: kmoretools6.po
po/hu/: kmoretools6.po
po/hy/: kmoretools6.po
po/ia/: kmoretools6.po
po/id/: kmoretools6.po
po/is/: kmoretools6.po
po/it/: kmoretools6.po
po/ja/: kmoretools6.po
po/ka/: kmoretools6.po
po/kk/: kmoretools6.po
po/km/: kmoretools6.po
po/kn/: kmoretools6.po
po/ko/: kmoretools6.po
po/ku/: kmoretools6.po
po/lb/: kmoretools6.po
po/lt/: kmoretools6.po
po/lv/: kmoretools6.po
po/mai/: kmoretools6.po
po/mk/: kmoretools6.po
po/ml/: kmoretools6.po
po/mr/: kmoretools6.po
po/ms/: kmoretools6.po
po/nb/: kmoretools6.po
po/nds/: kmoretools6.po
po/ne/: kmoretools6.po
po/nl/: kmoretools6.po
po/nn/: kmoretools6.po
po/oc/: kmoretools6.po
po/or/: kmoretools6.po
po/pa/: kmoretools6.po
po/pl/: kmoretools6.po
po/ps/: kmoretools6.po
po/pt/: kmoretools6.po
po/pt_BR/: kmoretools6.po
po/ro/: kmoretools6.po
po/ru/: kmoretools6.po
po/sa/: kmoretools6.po
po/se/: kmoretools6.po
po/si/: kmoretools6.po
po/sk/: kmoretools6.po
po/sl/: kmoretools6.po
po/sq/: kmoretools6.po
po/sr/: kmoretools6.po
po/sr@ijekavian/: kmoretools6.po
po/sr@ijekavianlatin/: kmoretools6.po
po/sr@latin/: kmoretools6.po
po/sv/: kmoretools6.po
po/ta/: kmoretools6.po
po/te/: kmoretools6.po
po/tg/: kmoretools6.po
po/th/: kmoretools6.po
po/tr/: kmoretools6.po
po/tt/: kmoretools6.po
po/ug/: kmoretools6.po
po/uk/: kmoretools6.po
po/uz/: kmoretools6.po
po/uz@cyrillic/: kmoretools6.po
po/vi/: kmoretools6.po
po/wa/: kmoretools6.po
po/xh/: kmoretools6.po
po/zh_CN/: kmoretools6.po
po/zh_HK/: kmoretools6.po
po/zh_TW/: kmoretools6.po
src/: CMakeLists.txt  Messages.sh  kmoretools.cpp  kmoretools.h  kmoretools_p.h  kmoretoolsconfigdialog_p.cpp  kmoretoolsmenufactory.cpp  kmoretoolsmenufactory.h  kmoretoolspresets.cpp  kmoretoolspresets.h
tests/: CMakeLists.txt  kmoretoolstest_interactive.cpp
